fix: optimize admin sidebar on small viewports

--- a/ui/src/styles/SideBar.css
+++ b/ui/src/styles/SideBar.css
@@ -1,5 +1,9 @@
+:root {
+  --sidebar-width-sm: 50px;
+}
+
 .sidebar {
-  min-width: 50px;
+  min-width: var(--sidebar-width-sm);
   position: fixed;
   top: 0;
   bottom: 0;
@@ -54,4 +58,25 @@
 
 .sidebar .nav-link.disabled {
   color: #999;
+}
+
+/* fixed width for sidebar and icon on viewports xs + sm */
+@media (max-width: 767.98px) {
+  .navbar-brand,
+  #sidebarMenu {
+    width: var(--sidebar-width-sm) !important;
+    flex: 0 0 var(--sidebar-width-sm) !important;
+    max-width: var(--sidebar-width-sm) !important;
+    padding: 0 !important;
+  }
+
+  .navbar-brand img {
+    margin: 0 auto;
+  }
+
+  main[role="main"] {
+    width: calc(100% - var(--sidebar-width-sm)) !important;
+    flex: 0 0 calc(100% - var(--sidebar-width-sm)) !important;
+    max-width: calc(100% - var(--sidebar-width-sm)) !important;
+  }
 }
